--- a/package.json
+++ b/package.json
@@ -50,8 +50,12 @@
       "--experimental-specifier-resolution=node"
     ]
   },
-  "name": "@iasd/handleAsync",
+  "name": "@iasd/handle-async",
   "version": "1.0.0",
   "author": "Sebastian <sebastian@iamsebastian.dev>",
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "unpkg": "./dist/handleAsync.browser.min.js"
 }
