--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
+  "types": "dist/types/index.d.ts",
   "exports": {
     "require": "./dist/index.js",
-    "import": "./dist/index.mjs"
+    "import": "./dist/index.mjs",
+    "types": "./dist/types/index.d.ts"
   },
-  "types": "dist/types/index.d.ts",
   "license": "MIT",
   "devDependencies": {
     "@commitlint/cli": "^18.4.1",
@@ -18,8 +19,8 @@
     "ava": "^6.0.1",
     "esbuild": "^0.19.2",
     "husky": "^8.0.2",
+    "lint-staged": "^15.2.2",
     "prettier": "^3.0.0",
-    "pretty-quick": "^3.1.3",
     "rollup": "^4.9.1",
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-dts": "^6.1.0",
@@ -57,5 +58,9 @@
   "publishConfig": {
     "access": "public"
   },
-  "unpkg": "./dist/handleAsync.browser.min.js"
+  "unpkg": "./dist/handleAsync.browser.min.js",
+  "lint-staged": {
+    "*.{ts,css,md}": "prettier --write"
+  },
+  "dependencies": {}
 }
