--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^20.10.3",
     "alex": "^11.0.0",
     "ava": "^6.0.1",
+    "c8": "^9.1.0",
     "esbuild": "^0.19.2",
     "husky": "^8.0.2",
     "lint-staged": "^15.2.2",
@@ -27,8 +28,8 @@
     "rollup-plugin-esbuild": "^6.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "semantic-release": "^22.0.5",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.3.2"
+    "tsx": "^4.7.1",
+    "typescript": "^5.4.2"
   },
   "scripts": {
     "preci": "rm -rf node_modules",
@@ -39,17 +40,13 @@
     "dev": "yarn build --watch",
     "lint": "alex .",
     "semantic-release": "semantic-release --branches release",
-    "test": "ava"
+    "test": "NODE_OPTIONS='--import tsx' yarn ava",
+    "test:coverage": "c8 yarn run test"
   },
   "ava": {
     "extensions": {
-      "ts": "module"
-    },
-    "nodeArguments": [
-      "--no-warnings",
-      "--loader=ts-node/esm",
-      "--experimental-specifier-resolution=node"
-    ]
+      "ts": "commonjs"
+    }
   },
   "name": "@iasd/handle-async",
   "version": "1.0.0",
